# ASD-Courses

./: CMakeLists.txt
ES1/: class.h  main.cpp
ES2/: indovinello.hpp  main.cpp
ES3/: main.cpp
ES4/: main.cpp
ES5/: main.cpp
ES6/: main.cpp
ES7/: main.cpp
