cmake_minimum_required(VERSION 3.31)
project(ASD)

set(CMAKE_CXX_STANDARD 11)

add_executable(ES1 ES1/main.cpp ES1/class.h)
add_executable(ES2 ES2/main.cpp ES2/indovinello.hpp)
add_executable(ES3 ES3/main.cpp )
add_executable(ES4 ES4/main.cpp )
add_executable(ES5 ES5/main.cpp )
add_executable(ES6 ES6/main.cpp )



